# AutoResearch-Det

./: LICENSE  ReadMe.md  autoresearch.py  config.py  live_stream_training.py  main.py  plot_progress.py  prepare.py  pyproject.toml  train.py
agent/: llm_client.py  prompt_builder.py
autoresearch/: live_stream_training.py  program.md  train.py
autoresearch/agent/: multi_agent.py  parser.py  prompt_builder.py
autoresearch/core/: history.py
autoresearch/data/: prepare.py
autoresearch/executor/: trainer.py  vram_manager.py
autoresearch/utils/: logger.py
autoresearchdet/: main.py  program.md
autoresearchdet/utils/: metrics.py
core/: pipeline.py
data/: prepare.py
examples/: README.txt  sample_results.tsv
executor/: git_ops.py  trainer.py  validator.py
